--- a/apps/views/admin/post/add.pug
+++ b/apps/views/admin/post/add.pug
@@ -1,43 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Add post</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <%- include ../layout/head %>
-</head>
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+extends ../layout.pug
 
-<%- include ../layout/nav %>
+block morecss
+  script(src='https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js')
+  script.
+    tinymce.init({selector:'textarea'});
 
-<div class="container">
-    <h2>Add post</h2>
-    <div id="signupalert" style="<%if (!data || !data.error){ %> display:none; <%}%>" class="alert alert-danger">
-        <p>Error:</p>
+block content
+  header.section-header
+    .tbl
+      .tbl-row
+        .tbl-cell
+          h3 Thêm Bài Viết
 
-        <% if (data && data.error){ %>
-            <span> <%= data.error %></span>
+  .box-typical.box-typical-padding
+    form(method='POST' action='/admin/post/add')
+      .alert.alert-danger(role='alert' style=`${!data || !data.error ? 'display:none'  : '' } `)
+              if data && data.error
+              span #{data.error}
+      .form-group.row
+        label.col-sm-2.form-control-label Title
+        .col-sm-10
+          p.form-control-static
+            input.form-control(type='text' name="title" placeholder='Title')
+      .form-group.row
+        label.col-sm-2.form-control-label Description
+        .col-sm-10
+          p.form-control-static
+            input.form-control(type='text' name="description" placeholder='Description')
+      .form-group.row
+        label.col-sm-2.form-control-label(for='exampleSelect') Content
+        .col-sm-10
+          textarea.form-control(rows='4' name="content" placeholder='Content')
 
-        <% } %>
-    </div>
-    <form method="POST" action="/admin/post/new">
-      <div class="form-group">
-        <label>title:</label>
-        <input class="form-control" name="title">
-      </div>
-      <div class="form-group">
-        <label>author:</label>
-        <input class="form-control" name="author">
-      </div>
-      <div class="form-group">
-          <label>content:</label>
-          <textarea class="form-control" name="content" id="" cols="30" rows="5"></textarea>
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-</div>
-
-
-</body>
-</html>
+      button.btn.btn-inline.btn-primary.ladda-button(data-style='expand-right' data-size='xs' type="submit")
+        span.ladda-label Save
+        span.ladda-spinner
