--- a/apps/views/admin/partials/header.pug
+++ b/apps/views/admin/partials/header.pug
@@ -10,156 +10,9 @@ header.site-header
     .site-header-content
       .site-header-content-in
         .site-header-shown
-          .dropdown.dropdown-notification.notif
-            a#dd-notification.header-alarm.dropdown-toggle.active(href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-              i.font-icon-alarm
-            .dropdown-menu.dropdown-menu-right.dropdown-menu-notif(aria-labelledby='dd-notification')
-              .dropdown-menu-notif-header
-                | Notifications
-                span.label.label-pill.label-danger 4
-              .dropdown-menu-notif-list
-                .dropdown-menu-notif-item
-                  .photo
-                    img(src='img/photo-64-1.jpg' alt='')
-                  .dot
-                  a(href='#') Morgan
-                  |  was bothering about something
-                  .color-blue-grey-lighter 7 hours ago
-                .dropdown-menu-notif-item
-                  .photo
-                    img(src='img/photo-64-2.jpg' alt='')
-                  .dot
-                  a(href='#') Lioneli
-                  |  had commented on this 
-                  a(href='#') Super Important Thing
-                  .color-blue-grey-lighter 7 hours ago
-                .dropdown-menu-notif-item
-                  .photo
-                    img(src='img/photo-64-3.jpg' alt='')
-                  .dot
-                  a(href='#') Xavier
-                  |  had commented on the 
-                  a(href='#') Movie title
-                  .color-blue-grey-lighter 7 hours ago
-                .dropdown-menu-notif-item
-                  .photo
-                    img(src='img/photo-64-4.jpg' alt='')
-                  a(href='#') Lionely
-                  |  wants to go to 
-                  a(href='#') Cinema
-                  |  with you to see 
-                  a(href='#') This Movie
-                  .color-blue-grey-lighter 7 hours ago
-              .dropdown-menu-notif-more
-                a(href='#') See more
-          .dropdown.dropdown-notification.messages
-            a#dd-messages.header-alarm.dropdown-toggle.active(href='#' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-              i.font-icon-mail
-            .dropdown-menu.dropdown-menu-right.dropdown-menu-messages(aria-labelledby='dd-messages')
-              .dropdown-menu-messages-header
-                ul.nav(role='tablist')
-                  li.nav-item
-                    a.nav-link.active(data-toggle='tab' href='#tab-incoming' role='tab')
-                      | Inbox
-                      span.label.label-pill.label-danger 8
-                  li.nav-item
-                    a.nav-link(data-toggle='tab' href='#tab-outgoing' role='tab') Outbox
-                //
-                  <button type="button" class="create">
-                  <i class="font-icon font-icon-pen-square"></i>
-                  </button>
-              .tab-content
-                #tab-incoming.tab-pane.active(role='tabpanel')
-                  .dropdown-menu-messages-list
-                    a.mess-item(href='#')
-                      span.avatar-preview.avatar-preview-32
-                        img(src='img/photo-64-2.jpg' alt='')
-                      span.mess-item-name Tim Collins
-                      span.mess-item-txt Morgan was bothering about something!
-                    a.mess-item(href='#')
-                      span.avatar-preview.avatar-preview-32
-                        img(src='img/avatar-2-64.png' alt='')
-                      span.mess-item-name Christian Burton
-                      span.mess-item-txt Morgan was bothering about something! Morgan was bothering about something.
-                    a.mess-item(href='#')
-                      span.avatar-preview.avatar-preview-32
-                        img(src='img/photo-64-2.jpg' alt='')
-                      span.mess-item-name Tim Collins
-                      span.mess-item-txt Morgan was bothering about something!
-                    a.mess-item(href='#')
-                      span.avatar-preview.avatar-preview-32
-                        img(src='img/avatar-2-64.png' alt='')
-                      span.mess-item-name Christian Burton
-                      span.mess-item-txt Morgan was bothering about something...
-                #tab-outgoing.tab-pane(role='tabpanel')
-                  .dropdown-menu-messages-list
-                    a.mess-item(href='#')
-                      span.avatar-preview.avatar-preview-32
-                        img(src='img/avatar-2-64.png' alt='')
-                      span.mess-item-name Christian Burton
-                      span.mess-item-txt Morgan was bothering about something! Morgan was bothering about something...
-                    a.mess-item(href='#')
-                      span.avatar-preview.avatar-preview-32
-                        img(src='img/photo-64-2.jpg' alt='')
-                      span.mess-item-name Tim Collins
-                      span.mess-item-txt Morgan was bothering about something! Morgan was bothering about something.
-                    a.mess-item(href='#')
-                      span.avatar-preview.avatar-preview-32
-                        img(src='img/avatar-2-64.png' alt='')
-                      span.mess-item-name Christian Burtons
-                      span.mess-item-txt Morgan was bothering about something!
-                    a.mess-item(href='#')
-                      span.avatar-preview.avatar-preview-32
-                        img(src='img/photo-64-2.jpg' alt='')
-                      span.mess-item-name Tim Collins
-                      span.mess-item-txt Morgan was bothering about something!
-              .dropdown-menu-notif-more
-                a(href='#') See more
-          .dropdown.dropdown-lang
-            button.dropdown-toggle(type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-              span.flag-icon.flag-icon-us
-            .dropdown-menu.dropdown-menu-right
-              .dropdown-menu-col
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-ru
-                  | &Rcy;&ucy;&scy;&scy;&kcy;&icy;&jcy;
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-de
-                  | Deutsch
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-it
-                  | Italiano
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-es
-                  | Espa&ntilde;ol
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-pl
-                  | Polski
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-li
-                  | Lietuviu
-              .dropdown-menu-col
-                a.dropdown-item.current(href='#')
-                  span.flag-icon.flag-icon-us
-                  | English
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-fr
-                  | Fran&ccedil;ais
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-by
-                  | &Bcy;&iecy;&lcy;&acy;&rcy;&ucy;&scy;&kcy;i
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-ua
-                  | &Ucy;&kcy;&rcy;&acy;&yicy;&ncy;&scy;&softcy;&kcy;&acy;
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-cz
-                  | &Ccaron;esky
-                a.dropdown-item(href='#')
-                  span.flag-icon.flag-icon-ch
-                  | &#x4E2D;&#x570B;
           .dropdown.user-menu
             button#dd-user-menu.dropdown-toggle(type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-              img(src='img/avatar-2-64.png' alt='')
+              img(src='/static/themeadmin/img/avatar-2-64.png' alt='')
             .dropdown-menu.dropdown-menu-right(aria-labelledby='dd-user-menu')
               a.dropdown-item(href='#')
                 span.font-icon.glyphicon.glyphicon-user
@@ -178,207 +31,7 @@ header.site-header
             i.font-icon-menu-addl
         // .site-header-shown
         .mobile-menu-right-overlay
-        .site-header-collapsed
-          .site-header-collapsed-in
-            .dropdown.dropdown-typical
-              .dropdown-menu(aria-labelledby='dd-header-sales')
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-home
-                  | Quant and Verbal
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-cart
-                  | Real Gmat Test
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-speed
-                  | Prep Official App
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-users
-                  | CATprer Test
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-comments
-                  | Third Party Test
-            .dropdown.dropdown-typical
-              a#dd-header-marketing.dropdown-toggle(data-target='#' href='http://example.com' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-                span.font-icon.font-icon-cogwheel
-                span.lbl Marketing automation
-              .dropdown-menu(aria-labelledby='dd-header-marketing')
-                a.dropdown-item(href='#') Current Search
-                a.dropdown-item(href='#') Search for Issues
-                .dropdown-divider
-                .dropdown-header Recent issues
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-home
-                  | Quant and Verbal
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-cart
-                  | Real Gmat Test
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-speed
-                  | Prep Official App
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-users
-                  | CATprer Test
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-comments
-                  | Third Party Test
-                .dropdown-more
-                  .dropdown-more-caption.padding more...
-                  .dropdown-more-sub
-                    .dropdown-more-sub-in
-                      a.dropdown-item(href='#')
-                        span.font-icon.font-icon-home
-                        | Quant and Verbal
-                      a.dropdown-item(href='#')
-                        span.font-icon.font-icon-cart
-                        | Real Gmat Test
-                      a.dropdown-item(href='#')
-                        span.font-icon.font-icon-speed
-                        | Prep Official App
-                      a.dropdown-item(href='#')
-                        span.font-icon.font-icon-users
-                        | CATprer Test
-                      a.dropdown-item(href='#')
-                        span.font-icon.font-icon-comments
-                        | Third Party Test
-                .dropdown-divider
-                a.dropdown-item(href='#') Import Issues from CSV
-                .dropdown-divider
-                .dropdown-header Filters
-                a.dropdown-item(href='#') My Open Issues
-                a.dropdown-item(href='#') Reported by Me
-                .dropdown-divider
-                a.dropdown-item(href='#') Manage filters
-                .dropdown-divider
-                .dropdown-header Timesheet
-                a.dropdown-item(href='#') Subscribtions
-            .dropdown.dropdown-typical
-              a#dd-header-social.dropdown-toggle(data-target='#' href='http://example.com' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-                span.font-icon.font-icon-share
-                span.lbl Social media
-              .dropdown-menu(aria-labelledby='dd-header-social')
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-home
-                  | Quant and Verbal
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-cart
-                  | Real Gmat Test
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-speed
-                  | Prep Official App
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-users
-                  | CATprer Test
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-comments
-                  | Third Party Test
-            .dropdown.dropdown-typical
-              a.dropdown-toggle.no-arr(href='#')
-                span.font-icon.font-icon-page
-                span.lbl Projects
-                span.label.label-pill.label-danger 35
-            .dropdown.dropdown-typical
-              a#dd-header-form-builder.dropdown-toggle(data-target='#' href='http://example.com' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-                span.font-icon.font-icon-pencil
-                span.lbl Form builder
-              .dropdown-menu(aria-labelledby='dd-header-form-builder')
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-home
-                  | Quant and Verbal
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-cart
-                  | Real Gmat Test
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-speed
-                  | Prep Official App
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-users
-                  | CATprer Test
-                a.dropdown-item(href='#')
-                  span.font-icon.font-icon-comments
-                  | Third Party Test
-            .dropdown
-              button#dd-header-add.btn.btn-rounded.dropdown-toggle(type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-                | Add
-              .dropdown-menu(aria-labelledby='dd-header-add')
-                a.dropdown-item(href='#') Quant and Verbal
-                a.dropdown-item(href='#') Real Gmat Test
-                a.dropdown-item(href='#') Prep Official App
-                a.dropdown-item(href='#') CATprer Test
-                a.dropdown-item(href='#') Third Party Test
-            .help-dropdown
-              button(type='button')
-                i.font-icon.font-icon-help
-              .help-dropdown-popup
-                .help-dropdown-popup-side
-                  ul
-                    li
-                      a(href='#') Getting Started
-                    li
-                      a.active(href='#') Creating a new project
-                    li
-                      a(href='#') Adding customers
-                    li
-                      a(href='#') Settings
-                    li
-                      a(href='#') Importing data
-                    li
-                      a(href='#') Exporting data
-                .help-dropdown-popup-cont
-                  .help-dropdown-popup-cont-in
-                    .jscroll
-                      a.help-dropdown-popup-item(href='#')
-                        | Lorem Ipsum is simply
-                        span.describe Lorem Ipsum has been the industry&apos;s standard dummy text 
-                      a.help-dropdown-popup-item(href='#')
-                        | Contrary to popular belief
-                        span.describe
-                          | Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC
-                      a.help-dropdown-popup-item(href='#')
-                        | The point of using Lorem Ipsum
-                        span.describe
-                          | Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text
-                      a.help-dropdown-popup-item(href='#')
-                        | Lorem Ipsum
-                        span.describe There are many variations of passages of Lorem Ipsum available
-                      a.help-dropdown-popup-item(href='#')
-                        | Lorem Ipsum is simply
-                        span.describe Lorem Ipsum has been the industry&apos;s standard dummy text 
-                      a.help-dropdown-popup-item(href='#')
-                        | Contrary to popular belief
-                        span.describe
-                          | Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC
-                      a.help-dropdown-popup-item(href='#')
-                        | The point of using Lorem Ipsum
-                        span.describe
-                          | Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text
-                      a.help-dropdown-popup-item(href='#')
-                        | Lorem Ipsum
-                        span.describe There are many variations of passages of Lorem Ipsum available
-                      a.help-dropdown-popup-item(href='#')
-                        | Lorem Ipsum is simply
-                        span.describe Lorem Ipsum has been the industry&apos;s standard dummy text 
-                      a.help-dropdown-popup-item(href='#')
-                        | Contrary to popular belief
-                        span.describe
-                          | Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC
-                      a.help-dropdown-popup-item(href='#')
-                        | The point of using Lorem Ipsum
-                        span.describe
-                          | Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text
-                      a.help-dropdown-popup-item(href='#')
-                        | Lorem Ipsum
-                        span.describe There are many variations of passages of Lorem Ipsum available
-            // .help-dropdown
-            a.btn.btn-nav.btn-rounded.btn-inline.btn-danger-outline(href='http://themeforest.net/item/startui-premium-bootstrap-4-admin-dashboard-template/15228250?ref=themesanytime')
-              | Buy Theme
-            .site-header-search-container
-              form.site-header-search.closed
-                input(type='text' placeholder='Search')
-                button(type='submit')
-                  span.font-icon-search
-                .overlay
-          // .site-header-collapsed-in
-        // .site-header-collapsed
+       
       // site-header-content-in
     // .site-header-content
   // .container-fluid
