--- a/apps/views/admin/post/index.pug
+++ b/apps/views/admin/post/index.pug
@@ -21,7 +21,9 @@ block content
             td(width='1')
               .tabledit-toolbar.btn-toolbar
                 .btn-group.btn-group-sm
-                  a.tabledit-edit-button.btn.btn-sm.btn-default
+                  a.tabledit-edit-button.btn.btn-sm.btn-default(href=`/admin/post/edit/${item.id}`)
                     span.glyphicon.glyphicon-pencil
-                  a.tabledit-delete-button.btn.btn-sm.btn-default
+                  a.tabledit-delete-button.btn.btn-sm.btn-default.post_delete(post_id=`${item.id}`)
                     span.glyphicon.glyphicon-trash
+block morejs
+  script(type='text/javascript' src='/static/js/post.js')
